# zkRust

./: .gitignore  Cargo.toml  Makefile  README.md  auxfile.rs  guest.elf  guest.proof  install_zkrust.sh  proof-with-io.json  risc_zero.proof  rust-toolchain  sp1.elf  sp1.proof  sp1_proof.json
.jolt/: Cargo.toml
.jolt/guest/: Cargo.toml
.jolt/guest/src/: lib.rs
.jolt/src/: main.rs
.risc_zero/host/: Cargo.toml
.risc_zero/host/src/: main.rs
.risc_zero/methods/guest/: Cargo.toml
.risc_zero/methods/guest/src/: main.rs
.sp1/program/: Cargo.toml
.sp1/script/: Cargo.toml
examples/ecdsa/: Cargo.toml
examples/ecdsa/src/: main.rs
examples/fibonacci/: Cargo.toml
examples/fibonacci/src/: main.rs
examples/fibonacci_no_std/: Cargo.toml
examples/fibonacci_std/: Cargo.toml
examples/fibonacci_std/src/: main.rs
examples/is_even/: Cargo.toml
examples/is_even/src/: main.rs
examples/json/: Cargo.toml
examples/json/lib/src/: lib.rs
examples/json/src/: main.rs
examples/regex/: Cargo.toml
examples/regex/src/: input.rs  main.rs  output.rs
examples/rsa/: Cargo.toml
examples/rsa/src/: main.rs
examples/sha/: Cargo.toml
examples/sha/src/: main.rs
examples/tendermint/: Cargo.toml
examples/tendermint/src/: input.rs  main.rs  utils.rs
examples/zkquiz/: Cargo.toml
examples/zkquiz/src/: input.rs  main.rs  output.rs  utils.rs
fibonacci_code_example/src/: main.rs
guest/: Cargo.toml
guest/src/: lib.rs  main.rs
src/: jolt.rs  lib.rs  main.rs  risc0.rs  sp1.rs  utils.rs
tmp_guest/: Cargo.toml
tmp_guest/src/: lib.rs  main.rs
workspaces/base_files/: jolt  risc0
workspaces/base_files/risc0/: cargo_host  host
workspaces/base_files/sp1/: cargo  cargo_guest  cargo_host  host
workspaces/jolt/: Cargo.toml
workspaces/jolt/guest/: Cargo.toml
workspaces/jolt/src/: main.rs
workspaces/risc0/: .gitignore
workspaces/risc0/host/: Cargo.toml
workspaces/risc0/host/src/: main.rs
workspaces/risc0/methods/guest/src/: main.rs
workspaces/sp1/: rust-toolchain.toml
workspaces/sp1/program/: Cargo.toml
workspaces/sp1/program/elf/: riscv32im-succinct-zkvm-elf
workspaces/sp1/program/src/: main.rs
workspaces/sp1/script/: Cargo.toml
workspaces/sp1/script/src/: main.rs  output.rs  utils.rs
zk_rust_io/: Cargo.toml
zk_rust_io/src/: lib.rs
zkvms/risc0/host/: Cargo.toml
zkvms/risc0/host/src/: main.rs
