[package]
name = "zkRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.5"
anyhow = "1.0.86"
hex = "0.4.3"
tokio = "1.38.0"

# Jolt
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["host"] }

# Sp1
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.8-testnet" }

# Risc 0
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", tag = "v1.0.1" }

# Aligned SDK
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag = "v0.2.1" }
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }

dialoguer = "0.11.0"
bincode = "1.3.3"
rpassword = "7.3.1"


[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
