[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.4"
hex-literal = "0.4"
k256 = { version = "=0.13.3", features = [
    "arithmetic",
    "serde",
    "expose-field",
    "std",
    "ecdsa",
], default_features = false }
zk_rust_io = { git = "https://github.com/yetanotherco/zkRust.git" }
