[package]
name = "json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
zk_rust_io = { git = "https://github.com/yetanotherco/zkRust.git" }
lib = { path = "lib" }
