[package]
name = "rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.7"
rand = "0.8.5"
rsa = "0.6.0"                                                                           # Check for the latest version
sha2 = "0.10.8"
zk_rust_io = { git = "https://github.com/yetanotherco/zkRust.git", branch = "feat/v2" }