[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v1.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3.3"

digest = "0.10.7"
rand = "0.8.5"
rsa = "0.6.0"                                                                           # Check for the latest version
sha2 = "0.10.8"
zk_rust_io = { git = "https://github.com/yetanotherco/zkRust.git", branch = "feat/v2" }
